# clea-project-manager-assistant

./: CHANGELOG.md  README.md  main.py  pyproject.toml  release-please-config.json
.github/workflows/: checks.yml  publish.yml  release-please.yml
pma/: cli.py
pma/integrations/: linear.py
pma/mcp_servers/: servers.py
pma/mcp_servers/linear/: issues.py  mcp_server.py  projects.py  users.py
pma/utils/: constants.py  print.py  prompts.py
