[tool.poetry]
name = "project-manager-assistant"
version = "0.1.0"
description = ""
authors = ["samdouble <not-real@not-real.com>"]
readme = "README.md"
packages = [{ include = "pma" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.3"
keyring = "^25.6.0"
requests = "^2.32.3"
rich = "^14.0.0"
anthropic = "^0.51.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
