[tool.poetry]
name = "clea-pma"
version = "0.1.0"
description = "Your project manager assistant"
authors = ["samdouble <not-real@not-real.com>"]
readme = "README.md"
packages = [{ include = "pma" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.3"
keyring = "^25.6.0"
requests = "^2.32.3"
rich = "^14.0.0"
anthropic = "^0.51.0"
fastmcp = "^2.3.1"
alive-progress = "^3.2.0"

[tool.poetry.scripts]
clea = "main:main"
pma = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
